# playwright-byob

./: AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml  zensical.toml
.github/workflows/: ci-tests.yml  docs.yml
docs/: changelog.md  index.md
docs/articles/: privacy.md  usage.md
docs/reference/: index.md
docs/scripts/: sync.sh
docs/stylesheets/: extra.css
src/playwright_byob/: __init__.py  _chrome.py
tests/: test_chrome.py  test_integration_chrome.py  test_placeholder.py
